2006-10-26  Nick Roberts  <nickrob@snap.net.nz>

	* bindings.el (mode-line-mode-menu): Remove bindings for global
	minor modes (line/column number) as they are on the menubar.

2006-10-25  Juanma Barranquero  <lekktu@gmail.com>

	* term/w32-win.el (x-handle-name-switch): Doc fix.
	(w32-standard-fontset-spec): Fix typo in docstring.

	* midnight.el (midnight-buffer-display-time): Doc fix.
	(clean-buffer-list-kill-never-buffer-names): Add "*server*".

2006-10-22  martin rudalics  <rudalics@gmx.at>

	* textmodes/flyspell.el (flyspell-check-region-doublons):
	Fix last fix.

2006-10-23  Nick Roberts  <nickrob@snap.net.nz>

	* bindings.el (mode-line-mode-menu): List global minor modes
	before local ones.

2006-10-23  Kim F. Storm  <storm@cua.dk>

	* subr.el (add-to-list): Optimize if compare-fn is `eq' or `eql'.
	(sit-for): If last command was a prefix arg, add the read-ahead
	event to unread-command-events as (t . EVENT) so it will be added
	to this-command-keys by read-key-sequence.

2006-10-22  martin rudalics  <rudalics@gmx.at>

	* textmodes/flyspell.el (flyspell-word): Skip past all previous
	whitespace when checking doublons.
	(flyspell-check-region-doublons): Fix doublon regexp.
	(flyspell-highlight-incorrect-region): Highlight doublons using
	flyspell-duplicate face.

	* progmodes/cperl-mode.el (cperl-invalid-face): Fix defcustom.

2006-10-22  John Wiegley  <johnw@newartisans.com>

	* progmodes/python.el (python-use-skeletons): python-mode was
	auto-inserting templates (for those with abbrev-mode on), not only
	by default -- *but without a configuration variable to disable
	it*.  This rendered python-mode completely useless for me, so I
	have added `python-use-skeletons', which is now off by default.

2006-10-22  Chong Yidong  <cyd@stupidchicken.com>

	* progmodes/cperl-mode.el (cperl-mode): Don't assume
	font-lock-multiline is auto-local (it's not).
	(cperl-windowed-init): Ensure that cperl-font-lock-multiline is
	initialized before calling cperl-init-faces.
