@@ -1,3 +1,8 @@
+2006-10-26  Chong Yidong  <cyd@stupidchicken.com>
+
+	* emacs-lisp/cl-indent.el (lisp-indent-259): Indent nil's in the
+	pattern normally.
+
 2006-10-26  Nick Roberts  <nickrob@snap.net.nz>
 
 	* bindings.el (mode-line-mode-menu): Remove bindings for global
